<resources>

    <string name="activity_error">Activity cannot be null</string>
    <string name="app_name">Project Quiz</string>
    <string name="armenian_quiz">Armenian Quiz</string>
    <string name="smart_game">Smart Game</string>
    <string name="users">Users</string>

    <string name="authorization_text">Խաղի մասնակցի տվյալների վավերացում</string>
    <string name="start">Սկսել</string>
    <string name="cancel">Կասեցնել</string>

    <string name="register">Գրանցվել</string>
    <string name="registerTitle">Գրանցում</string>
    <string name="registerMessage">Մուտքագրեք պահանջվող տվյալները գրանցման համար։</string>
    <string name="register_failed">Գրանցման ձախողում․ </string>
    <string name="register_ok">Խաղի մասնակիցը հաջողությամբ գրանցվել է։ </string>

    <string name="login">Մուտք գործել</string>
    <string name="loginTitle">Մուտք</string>
    <string name="loginMessage">Մուտքագրեք պահանջվող տվյալները մուտքի համար։</string>
    <string name="login_failed">Մուտքի ձախողում․ </string>
    <string name="login_ok">Խաղի մասնակիցը հաջողությամբ մուտք է գործել խաղ։ </string>

    <string name="username">Օգտվողի անուն</string>
    <string name="username_empty">Մուտքագրեք ձեր օգտանունը</string>
    <string name="email">Email</string>
    <string name="email_empty">Մուտքագրեք ձեր էլ․ հասցեն</string>
    <string name="password">Գաղտնաբառ</string>
    <string name="password_wrong">Մուտքագրեք 5-ից ավել սիմվոլներից բաղկացած գաղտնաբառ</string>
    <string name="_0">0</string>
    <string name="current_count">Ընթացիկ հաշիվ</string>
    <string name="_00_00">Մնաց 00։00</string>
    <string name="question">0. Հարց</string>
    <string name="answer_1">Պատասխան 1</string>
    <string name="answer_2">Պատասխան 2</string>
    <string name="answer_3">Պատասխան 3</string>
    <string name="answer_4">Պատասխան 4</string>
    <string name="backButton"><![CDATA[<]]></string>
    <string name="connection_error">Connection error</string>
    <string name="title_activity_quiz_main_menu">QuizMainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_">Ընտրել բաժինը</string>
    <string name="options">Կարգավորումներ</string>
    <string name="points_of_game">Միավորներ</string>
    <string name="play_text">Խաղալ</string>
    <string name="change_avatar">Փոխել ավատարը</string>
    <string name="some_user">some user</string>
    <string name="exit">Ելք</string>
    <string name="settings_for_menu">Կարգավորումներ</string>
    <string name="bagratuni_family">Բագրատունիների ընտանիք</string>
    <string name="arshakuni_family">Արշակունիների ընտանիք</string>
    <string name="kingdom_of_van">Վանի Թագավորություն</string>
    <string name="artashesyan_family">Արտաշեսյանների ընտանիք</string>
    <string name="winning_text">Դուք վաստակել եք</string>
    <string name="score_text">միավոր</string>
    <string name="return_menu">Վերադառնալ մենյու</string>
</resources>