<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_authorization"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coral_color_gradient"
    tools:context=".AuthorizationFragment">


    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/calligraffitti"
            android:text="@string/armenian_quiz"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/smart_game"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"/>

        <ImageView
            android:id="@+id/main_apricot"
            android:layout_width="225dp"
            android:layout_height="282dp"
            android:layout_margin="25dp"
            app:srcCompat="@drawable/main_apricot" />
    </LinearLayout>

    <TextView
        android:id="@+id/getStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:gravity="center_horizontal"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/start"
        android:textColor="@color/sign_in_stroke"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/getStart"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sign_in"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sign_in"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

</RelativeLayout>