<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coral_color_gradient"
    tools:context=".gamepackage.MenuPageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginVertical="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/username_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/some_user"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/getAvatar"
                android:layout_width="248dp"
                android:layout_height="248dp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                app:srcCompat="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/playButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/play_text"
                android:background="@drawable/btn_sign_in"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingHorizontal="5dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/points_of_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/points_of_game"
                android:background="@drawable/btn_sign_in"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingHorizontal="5dp"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>